added config variable for definition mobile

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -126,6 +126,7 @@ $block-call-to-action-color: white
 $block-definition-border-color-hovered: $main-color
 $block-definition-color-hovered: $main-color
 $block-definition-font-size-desktop: px2rem(20)
+$block-definition-font-size: px2rem(20)
 // variable font family ? --> inter
 
 // Block pages
