definition block typo

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -263,5 +263,7 @@ footer[role="contentinfo"]
                 @include meta
                 @include link
                 
-                
-
+.block-definitions
+    details
+        summary
+            font-family: $body-font-family
