--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -93,10 +93,14 @@ ul.diplomas
         @include media-breakpoint-down(desktop)
             padding-bottom: $spacing1
         .container + div
+            position: relative
             @include media-breakpoint-down(desktop)
                 background-color: darken($program-color, 3)
                 margin: $spacing1 $spacing1 0
                 padding-bottom: $spacing1
+            @include media-breakpoint-up(desktop)
+                border-top: 1px solid hsla(0,0%,100%,.3)
+                margin-top: $spacing3
             .essential
                 dt
                     color: transparentize($hero-color, .2)
@@ -192,7 +196,8 @@ footer[role="contentinfo"]
 
 // Typography
 @include media-breakpoint-up(xl)
-    .persons__page
+    .persons__page,
+    .programs__section
         .lead
             @include h2
 
