--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -58,7 +58,7 @@ header[role="banner"]
     @include page-color($institute-color)
 
 // hero
-body:not(.diplomas__term)
+body:not(.diplomas__term):not(.page__home)
     @include media-breakpoint-up(desktop)
         .hero
             display: flex
