--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -137,8 +137,7 @@ $block-pages-card-page-background-hover: $site-color
 $block-posts-grid-columns: 2
 
 // Block timeline
-$block-timeline-horizontal-background: $institute-color
-$block-timeline-horizontal-color: white
+$block-timeline-horizontal-background: $block-pages-card-background
 
 // Block testimonials
 $block-testimonials-color: $institute-color
