--- a/assets/sass/_utils.sass
+++ b/assets/sass/_utils.sass
@@ -6,5 +6,8 @@
             color: $color
     .block-call_to_action
         --cta-background-color: #{$color}
-    .block-timeline--horizontal
-        background: $color
+    .block-pages--cards
+        .card:hover
+            background-color: $color
+    // .block-timeline--horizontal
+    //     background: $color
