--- a/assets/sass/_utils.sass
+++ b/assets/sass/_utils.sass
@@ -9,5 +9,15 @@
     .block-pages--cards
         .card:hover
             background-color: $color
+    ul.diplomas > li,
+        a:hover,
+        .programs li a:hover
+            color: $color
+    
+    .list-persons > li,
+    ol.programs > li 
+        &:hover,
+        a:hover
+            color: $color
     // .block-timeline--horizontal
     //     background: $color
