--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -115,6 +115,9 @@ ul.categories
         padding-bottom: $spacing3
         // min-height: auto !important
         // padding-bottom: 0
+        hgroup
+            position: relative
+            z-index: 2
         @include media-breakpoint-down(md)
             padding-top: px2rem(180)
         @include media-breakpoint-up(xl)
