--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -120,7 +120,7 @@ ul.categories
             z-index: 2
         @include media-breakpoint-down(md)
             padding-top: px2rem(180)
-        @include media-breakpoint-up(xl)
+        @include media-breakpoint-up(desktop)
             margin-bottom: $spacing4
             min-height: $hero-height-desktop
         @include media-breakpoint-up(desktop)
