--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,4 +2,6 @@
 @import "fonts"
 @import "_theme/hugo-osuny"
 @import "_utils"
-@import "style"
+@import "design-system"
+@import "blocks"
+@import "sections"
