--- a/assets/sass/_sections.sass
+++ b/assets/sass/_sections.sass
@@ -33,6 +33,19 @@ ul.categories
             @include media-breakpoint-up(md)
                 @include h3
 
+.diplomas__taxonomy
+    .diplomas
+        > li 
+            > a
+                @include h3
+            .programs
+                li
+                    @include h5
+.diplomas__term
+    ol.programs
+        li .title
+            @include h4
+
 .diplomas__term,
 .programs__section
     .hero
