--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,7 +1,8 @@
-@import "configuration"
-@import "fonts"
+@import "_theme/utils"
+@import "_fonts"
+@import "_configuration"
 @import "_theme/hugo-osuny"
 @import "_utils"
-@import "design-system"
-@import "blocks"
-@import "sections"
+@import "_design-system"
+@import "_blocks"
+@import "_sections"
