--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -12,8 +12,8 @@ $color-accent: $site-color
 $main-color: black
 
 // Fonts
-$body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-$heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$body-font-family: 'Inter', sans-serif
+$heading-font-family: 'Basier Circle', sans-serif
 
 // Headings
 
