--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -86,8 +86,10 @@ $header-dropdown-color: $main-color
 $header-sticky-color: $main-color
 $header-dropdown-full: true
 $header-logo-height: 42px
-$header-height-desktop: 102px 
 $header-sticky-invert-logo: true
+
+$header-height: 82px
+$header-height-desktop: 104px
 // variable pour le padding mobile ?
 // variable pour le bouton mobile ? (actuellement color-body)
     
