--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -54,8 +54,9 @@ $body-size: px2rem(16)
 $small-size-desktop: px2rem(14)
 
 // Meta
-$meta-font-family: px2rem(14)
+// à voir avec @Olivia
 $meta-size-desktop: px2rem(18)
+$meta-font-family: $body-font-family
 
 // Quotes
 $quote-size-short: px2rem(60) // TODO : vérifier les tailles de typo dans le block quote
@@ -66,9 +67,9 @@ $quote-line-height: 150%
 // Variable pour le text-decoration-offset du mixin link ?
 
 // Buttons
-$btn-font-size: px2rem(18)
+// à voir avec @Olivia
+$btn-font-size-desktop: px2rem(18)
 $btn-padding-x-desktop: px2rem(45)
-$btn-padding-x: px2rem(45)
 $btn-border-radius: px2rem(4)
 
 // Spacing
